# QuitusPoio

./: .gitignore  README.md  package-lock.json  package.json  wrangler.jsonc
src/: index.html  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/flyers/: flyers.json
tools/: png-to-ico.js
